Fixed the issue of incorrect field mapping in the submission process. Updated the FieldMappingController to handle new mapping logic and modified the LpIngestService to ensure proper data ingestion. Added new test cases to cover the changes and updated existing tests to reflect the new mapping behavior.