@@ -25,6 +25,24 @@ Grep/Glob → Read relevant section → Understand layer → Edit → Verify
 
 ---
 
+## Build Verification
+
+Run the full build and test suite after any significant code change (new endpoint, schema change, service refactor, test addition):
+
+```powershell
+$env:JAVA_HOME = "C:\Users\alexl\AppData\Roaming\Code\User\globalStorage\pleiades.java-extension-pack-jdk\java\21"
+$env:PATH = "$env:JAVA_HOME\bin;$env:PATH"
+$PROJ = "C:\Users\alexl\Projects\pe-sub-api"
+cd $PROJ
+& "$env:JAVA_HOME\bin\java.exe" "-Dmaven.multiModuleProjectDirectory=$PROJ" "--enable-native-access=ALL-UNNAMED" -classpath ".mvn\wrapper\maven-wrapper.jar" org.apache.maven.wrapper.MavenWrapperMain install
+```
+
+- The build must end with `BUILD SUCCESS` before the change is considered complete.
+- If tests fail, diagnose and fix before moving on — do not skip or comment out failing tests.
+- Test teardown that deletes rows from `facilities` must first delete from `audit_log` (FK constraint: `audit_log_facility_id_fkey`).
+
+---
+
 ## Test Coverage Requirements
 
 - Every endpoint must have an integration test hitting a real in-memory or Testcontainers PostgreSQL instance — no mocked repositories.
